@@ -54,5 +54,5 @@
       },
       "x_MailingList" : "http://groups.google.com/group/develnytprof-dev"
    },
-   "version" : "4.07"
+   "version" : "4.08"
 }
